--- a/index.html
+++ b/index.html
@@ -93,6 +93,15 @@
 				</form>
 			</div>
 		</div>
+		<div id="alert-box"><div id="alert">
+			<p>Are you sure you want to delete this character?</p>
+			<button class="confirm-delete">Yes</button>
+			<button class="cancel-delete">No</button>
+		</div></div>
+		<div id="error-box"><div id="error">
+			<p>There was an error Processing your Request</p>
+			<button class="confirm-error">Return</button>
+		</div></div>
 		<script src="jquery-3.2.1.min.js"></script>
 		<script src="store.js"></script>
 	</body>
